--- a/.github/workflows/update-homebrew.yml
+++ b/.github/workflows/update-homebrew.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: main
       
       - name: Extract version
         id: version
@@ -57,7 +58,7 @@ jobs:
           
           git add Formula/aja.rb
           git commit -m "Update Homebrew formula to ${{ steps.version.outputs.VERSION }}"
-          git push
+          git push origin main
       
       - name: Create/Update Homebrew Tap Repository
         env:
